# Polly2D

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md
Misc/GameTemplate/: .clang-format  .gitignore  CMakeLists.txt  README.md
Misc/GameTemplate/AndroidProject/: .gitignore
Misc/GameTemplate/Misc/: PackageManagement.cmake  README.md
Misc/GameTemplate/Src/: Game.hpp  Main.cpp  main.cpp
Src/: CMakeLists.txt  GraphicsAPISelection.cmake  ThirdParty.cmake
Src/Polly/Audio/: AudioDevice.cpp  AudioDeviceImpl.cpp  AudioDeviceImpl.hpp  CMakeLists.txt  LICENSE.md  Sound.cpp  SoundChannel.cpp  SoundChannelImpl.cpp  SoundChannelImpl.hpp  SoundImpl.cpp  SoundImpl.hpp  StbVorbis.cpp  StbVorbis.hpp  darray.cpp  darray.hpp  dr_impl.cpp  klatt.cpp  klatt.h  miniaudio_impl_objc.m  resonator.cpp  resonator.hpp  soloud.cpp  soloud.hpp  soloud_audiosource.cpp  soloud_audiosource.hpp  soloud_bassboostfilter.cpp  soloud_bassboostfilter.hpp  soloud_biquadresonantfilter.cpp  soloud_biquadresonantfilter.hpp  soloud_bus.cpp  soloud_bus.hpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_dcremovalfilter.cpp  soloud_dcremovalfilter.hpp  (+53 more)
Src/Polly/ContentManagement/: Archive.cpp  Archive.hpp  Asset.cpp  Asset.hpp  ContentManagement.cpp  ContentManager.cpp  ContentManager.hpp  FileSystem.cpp  ImageIO.cpp  ImageIO.hpp
Src/Polly/Core/: Algorithm.cpp  ArenaAllocator.hpp  Assume.cpp  BinPack.cpp  BinPack.hpp  BinaryReader.cpp  ByteBlob.cpp  Casting.hpp  Error.cpp  ExceptionRaising.cpp  Logging.cpp  LoggingInternals.cpp  LoggingInternals.hpp  MemoryReader.cpp  MemoryReader.hpp  Object.cpp  Object.hpp  PlatformDetection.cpp  PlatformDetection.hpp  Random.cpp  ReadableFile.cpp  ReadableFileImpl.cpp  ReadableFileImpl.hpp  RectPack.cpp  RectPackImpl.cpp  RectPackImpl.hpp  String.cpp  StringView.cpp  ToString.cpp  Util.cpp  WritableFile.cpp  WritableFileImpl.cpp  WritableFileImpl.hpp  XoshiroCpp.hpp  fast_float.hpp  to_chars.cpp  to_chars.hpp  utf8.hpp
Src/Polly/Game/: Game.cpp  GameImpl.cpp  GameImpl.hpp  Timer.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
Src/Polly/Graphics/: BitColors.hpp  CMakeLists.txt  CommonMetalInfo.hpp  CommonVulkanInfo.hpp  Font.cpp  FontImpl.cpp  FontImpl.hpp  GraphicsDevice.cpp  GraphicsDeviceImpl.cpp  GraphicsDeviceImpl.hpp  GraphicsResource.cpp  GraphicsResource.hpp  Image.cpp  ImageImpl.cpp  ImageImpl.hpp  InternalSharedShaderStructs.hpp  Painter.cpp  PainterImpl.cpp  PainterImpl.hpp  ParticleEmitterShape.cpp  ParticleModifier.cpp  ParticleSystem.cpp  ParticleSystemImpl.cpp  ParticleSystemImpl.hpp  PolyDrawCommands.hpp  Shader.cpp  ShaderImpl.cpp  ShaderImpl.hpp  ShaderParameter.hpp  Tessellation2D.cpp  Tessellation2D.hpp  Text.cpp  TextImpl.cpp  TextImpl.hpp  VertexElement.hpp
Src/Polly/Graphics/D3D11/: CMakeLists.txt  D3D11Image.cpp  D3D11Image.hpp  D3D11Painter.cpp  D3D11Painter.hpp  D3D11PipelineObjectCache.cpp  D3D11PipelineObjectCache.hpp  D3D11Prerequisites.cpp  D3D11Prerequisites.hpp  D3D11ShaderCompiler.cpp  D3D11ShaderCompiler.hpp  D3D11UserShader.cpp  D3D11UserShader.hpp  D3DWindow.cpp  D3DWindow.hpp
Src/Polly/Graphics/Metal/: CMakeLists.txt  MetalCBufferAllocator.cpp  MetalCBufferAllocator.hpp  MetalConversion.cpp  MetalConversion.hpp  MetalGraphicsDevice.cpp  MetalGraphicsDevice.hpp  MetalHelper.hpp  MetalHelper.mm  MetalImage.cpp  MetalImage.hpp  MetalPainter.cpp  MetalPainter.hpp  MetalPsoCache.cpp  MetalPsoCache.hpp  MetalSamplerStateCache.cpp  MetalSamplerStateCache.hpp  MetalUserShader.cpp  MetalUserShader.hpp  MetalWindow.cpp  MetalWindow.hpp
Src/Polly/Graphics/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLPainter.cpp  OpenGLPainter.hpp  OpenGLPrerequisites.cpp  OpenGLPrerequisites.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLShaderProgramCache.cpp  OpenGLShaderProgramCache.hpp  OpenGLUserShader.cpp  OpenGLUserShader.hpp  OpenGLVAO.cpp  OpenGLVAO.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  glad.c  glad.cpp  glad.h  glad.hpp
Src/Polly/Graphics/Resources/: MeshShaderDefault.shd  PolyShaderDefault.shd  SpriteShaderDefault.shd  SpriteShaderMonochromatic.shd
Src/Polly/Graphics/Vulkan/: CMakeLists.txt  GLSLToSpirVCompiler.cpp  GLSLToSpirVCompiler.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanFramebufferCache.cpp  VulkanFramebufferCache.hpp  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageAndViewPair.hpp  VulkanImageDescriptorCache.cpp  VulkanImageDescriptorCache.hpp  VulkanPainter.cpp  VulkanPainter.hpp  VulkanPrerequisites.cpp  VulkanPrerequisites.hpp  VulkanPsoCache.cpp  VulkanWindow.cpp  (+12 more)
Src/Polly/ImGui/: CMakeLists.txt  ImGui.cpp  ImGuiImpl.cpp  ImGuiImpl.hpp
Src/Polly/Input/: Gamepad.cpp  GamepadImpl.cpp  GamepadImpl.hpp  Input.cpp  InputImpl.cpp  InputImpl.hpp  MouseCursor.cpp  MouseCursorImpl.cpp  MouseCursorImpl.hpp
Src/Polly/Math/: Tween.cpp
Src/Polly/ShaderCompiler/: Ast.cpp  Ast.hpp  AstOptimizer.cpp  AstOptimizer.hpp  BinOpTable.cpp  BinOpTable.hpp  BuiltinSymbols.cpp  BuiltinSymbols.hpp  CBufferPacker.cpp  CBufferPacker.hpp  CodeBlock.cpp  CodeBlock.hpp  CompileError.cpp  CompileError.hpp  Decl.cpp  Decl.hpp  Expr.cpp  Expr.hpp  GLSLShaderGenerator.cpp  GLSLShaderGenerator.hpp  HLSLShaderGenerator.cpp  HLSLShaderGenerator.hpp  Lexer.cpp  Lexer.hpp  MetalShaderGenerator.cpp  MetalShaderGenerator.hpp  Naming.cpp  Naming.hpp  Parser.cpp  Parser.hpp  Scope.cpp  Scope.hpp  SemaContext.cpp  SemaContext.hpp  ShaderGenerator.cpp  ShaderGenerator.hpp  SourceLocation.cpp  SourceLocation.hpp  Stmt.cpp  Stmt.hpp  (+14 more)
Src/Polly/Spine/: CMakeLists.txt  Spine.cpp  SpineImpl.cpp  SpineImpl.hpp
Testing/: AssetDecryptionKey.cpp  CMakeLists.txt
Testing/Tests/: AnyTests.cpp  ArrayTests.cpp  LinalgTests.cpp  ListTests.cpp  MaybeTests.cpp  SharedPtrTests.cpp  SortedMapTests.cpp  SortedSetTests.cpp  StringTests.cpp
(+254 files in other folders)
